# sherpa-ncnn-opt

./: CMakeLists.txt  README.md
cmake/: ncnn.cmake
sherpa-ncnn/csrc/: CMakeLists.txt  sherpa-ncnn-alsa-opt.cc  sherpa-ncnn-opt.cc
